[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/HTS/HTS.gd" type="Script" id=1]
[ext_resource path="res://Images/curtain.png" type="Texture" id=2]
[ext_resource path="res://Images/boy.png" type="Texture" id=3]
[ext_resource path="res://Images/blue.png" type="Texture" id=4]
[ext_resource path="res://Images/red.png" type="Texture" id=5]
[ext_resource path="res://Images/shower.png" type="Texture" id=6]
[ext_resource path="res://Images/curtain_hole.png" type="Texture" id=7]
[ext_resource path="res://Images/shower_shower.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Tap/tap.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/HTS/Auto_Colors.gd" type="Script" id=10]
[ext_resource path="res://Images/face.png" type="Texture" id=11]

[node name="HTS" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="." index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 640.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
__meta__ = {
"_edit_lock_": true
}

[node name="curtain" type="Sprite" parent="Panel" index="0"]

position = Vector2( 640, 320 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="boy" type="Sprite" parent="Panel" index="1"]

position = Vector2( 640, 320 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="blue_cold" type="Sprite" parent="Panel" index="2"]

modulate = Color( 1, 1, 1, 0.705882 )
position = Vector2( 1040, -16 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="red_hot" type="Sprite" parent="Panel" index="3"]

modulate = Color( 1, 1, 1, 0.705882 )
position = Vector2( 1056, 800 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="shower" type="Sprite" parent="Panel" index="4"]

position = Vector2( 640, 320 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="curtain_hole" type="Sprite" parent="Panel" index="5"]

position = Vector2( 640, 320 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="shower_shower" type="Sprite" parent="Panel" index="6"]

position = Vector2( 640, 320 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="curtain_trans" type="Sprite" parent="Panel" index="7"]

modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 640, 320 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Control" type="Control" parent="Panel" index="8"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1040.0
margin_top = 192.0
margin_right = 1088.0
margin_bottom = 560.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_edit_lock_": true
}

[node name="tap" parent="." index="1" instance=ExtResource( 9 )]

position = Vector2( 32, 288 )

[node name="Auto_Colors" type="Control" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 96.0
margin_top = 432.0
margin_right = 608.0
margin_bottom = 560.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 10 )
_sections_unfolded = [ "Rect" ]

[node name="CanvasModulate" type="CanvasModulate" parent="." index="3"]

position = Vector2( 640, 320 )
scale = Vector2( 21, 11 )
color = Color( 0.976563, 0.993408, 1, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Info" type="Label" parent="." index="4"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 16.0
margin_right = 144.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Panel" type="Panel" parent="Info" index="0"]

show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 128.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="win_calc_target" type="Label" parent="." index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 880.0
margin_top = 48.0
margin_right = 1008.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="colors1" type="Label" parent="." index="6"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 864.0
margin_top = 240.0
margin_right = 1040.0
margin_bottom = 272.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="colors2" type="Label" parent="." index="7"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 864.0
margin_top = 288.0
margin_right = 1040.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Win_Panel" type="Panel" parent="." index="8"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 528.0
margin_top = 192.0
margin_right = 752.0
margin_bottom = 416.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_edit_lock_": true
}

[node name="win" type="Label" parent="Win_Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 16.0
margin_right = 192.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "You Won!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="face" type="Sprite" parent="Win_Panel" index="1"]

position = Vector2( 112, 96 )
texture = ExtResource( 11 )
_sections_unfolded = [ "Transform" ]

[node name="next_level" type="Button" parent="Win_Panel" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 176.0
margin_right = 192.0
margin_bottom = 208.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Next Level"
flat = false
align = 1

[node name="Lose_Panel" type="Panel" parent="." index="9"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 528.0
margin_top = 192.0
margin_right = 752.0
margin_bottom = 416.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_edit_lock_": true
}

[node name="lose" type="Label" parent="Lose_Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 16.0
margin_right = 192.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "You Lost"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="face" type="Sprite" parent="Lose_Panel" index="1"]

position = Vector2( 112, 112 )
rotation = 3.14159
texture = ExtResource( 11 )
_sections_unfolded = [ "Transform" ]

[node name="main_menu_lost" type="Button" parent="Lose_Panel" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 176.0
margin_right = 192.0
margin_bottom = 208.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Main Menu"
flat = false
align = 1

[node name="Escape_Panel" type="Panel" parent="." index="10"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 528.0
margin_top = 256.0
margin_right = 752.0
margin_bottom = 384.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_edit_lock_": true
}

[node name="pause" type="Label" parent="Escape_Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 16.0
margin_right = 192.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Pause"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="main_menu" type="Button" parent="Escape_Panel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 64.0
margin_right = 192.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Main Menu"
flat = false
align = 1

[node name="Endless_Panel" type="Panel" parent="." index="11"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 512.0
margin_top = 160.0
margin_right = 768.0
margin_bottom = 432.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_edit_lock_": true
}

[node name="win" type="Label" parent="Endless_Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 16.0
margin_right = 224.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "You Won the Game!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="face" type="Sprite" parent="Endless_Panel" index="1"]

position = Vector2( 128, 96 )
texture = ExtResource( 11 )
_sections_unfolded = [ "Transform" ]

[node name="main_menu_endless" type="Button" parent="Endless_Panel" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 48.0
margin_top = 176.0
margin_right = 208.0
margin_bottom = 208.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Main Menu"
flat = false
align = 1

[node name="endless" type="Button" parent="Endless_Panel" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 48.0
margin_top = 224.0
margin_right = 208.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Continue Endless"
flat = false
align = 1

[node name="win" type="Label" parent="." index="12"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 64.0
margin_right = 96.0
margin_bottom = 78.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="Win_Panel/next_level" to="." method="_on_next_level_pressed"]

[connection signal="pressed" from="Lose_Panel/main_menu_lost" to="." method="_on_main_menu_lost_pressed"]

[connection signal="pressed" from="Escape_Panel/main_menu" to="." method="_on_main_menu_pressed"]

[connection signal="pressed" from="Endless_Panel/main_menu_endless" to="." method="_on_main_menu_endless_pressed"]

[connection signal="pressed" from="Endless_Panel/endless" to="." method="_on_endless_pressed"]


